codepkg/objects/Reimbursement_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodging__c</fullName>
        <label>Lodging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MISC__c</fullName>
        <label>MISC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>Meal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement__c</fullName>
        <label>Reimbursement</label>
        <referenceTo>Reimbursement__c</referenceTo>
        <relationshipLabel>Expense Claim Line Items</relationshipLabel>
        <relationshipName>Reimbursement_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tot_Amount__c</fullName>
        <formula>Meal__c +  Lodging__c +  MISC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount_F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Claim Line Item</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>Reimbursement Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Claim Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>